--- a/ListaSimple.vcxproj.filters
+++ b/ListaSimple.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="lista_simple.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NodoD.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="lista_doble_lineal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NodoS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="lista_simple.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NodoD.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lista_doble_lineal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
